[package]
name = "firmware"
version = "0.1.0"
authors = ["Chris Osterwood <osterwood@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
embedded-hal = "0.2"
embedded-svc = "0.22.1"
esp-idf-hal = "0.38"
esp-idf-svc = "0.42"
esp-idf-sys = { version = "0.31", features = ["binstart"] }
log = "0.4"
sfsm = {version = "0.4", features = ["trace", "trace-messages", "trace-steps"]}

[build-dependencies]
embuild = "0.29"
anyhow = "1"
